only consider it a hotspot if in known location